--- a/booking.html
+++ b/booking.html
@@ -70,7 +70,7 @@
           <input type="text" id="firstName" name="First Name" required>
         </div>
         <div class="form__group">
-          <label for="lastName">Last Name</label>
+          <label for="lastName">Soyisim</label>
           <input type="text" id="lastName" name="Last Name" required>
         </div>
         <div class="form__group">
